--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   provider: ^6.1.2
   google_fonts: ^6.2.1
   flutter_native_splash: ^2.4.3
+  firebase_core: ^3.9.0
   # flutter_native_splash-development.yaml
 flutter_native_splash:
   color: "#FFFFFF"
