--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,7 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   shared_preferences: ^2.3.4
-  
+  fluttertoast: ^8.2.10
   flutter:
     sdk: flutter
   flutter_localizations:
@@ -39,6 +39,8 @@ dependencies:
   google_fonts: ^6.2.1
   flutter_native_splash: ^2.4.3
   firebase_core: ^3.9.0
+  cloud_firestore: ^5.6.0
+  firebase_auth: ^5.4.0
   # flutter_native_splash-development.yaml
 flutter_native_splash:
   color: "#FFFFFF"
